# gaussian-toolbox

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .renkulfsignore  Dockerfile  LICENSE.txt  README.html  README.md  environment.yml  gaussian_toolbox.html  gaussian_toolbox.utils.html  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  requirements_docs.txt  requirements_external.txt  search.html  searchindex.js  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: README.doctree  environment.pickle  gaussian_toolbox.doctree  gaussian_toolbox.utils.doctree  index.doctree
.renku/: metadata.yml  renku.ini  template_checksums.json
_sources/: README.md  gaussian_toolbox.utils.rst  index.rst
examples/: affine_transforms.ipynb  approximate_conditionals.ipynb  gaussian_objects.ipynb  gp.ipynb  linear_regression.ipynb  linear_regression.py  linear_regression_jax.py  lorenz_example.py  state_space_model.py  state_space_model_jax.py  test_fullhcov.ipynb  timeseries.ipynb  trunc_gaussian.ipynb
gaussian_toolbox/: __init__.py  approximate_conditional.py  conditional.py  factor.py  heteroscedastic_conditional.py  measure.py  pdf.py
notebooks/: Densities.ipynb  FirstSteps.ipynb  Kalman.ipynb  Linear Regression.ipynb  LowerBounds.ipynb  Tutorial.ipynb  Tutorial_Presentation.ipynb  affine_transforms.html  affine_transforms.ipynb  approximate_conditionals.html  approximate_conditionals.ipynb  gaussian_objects.html  gaussian_objects.ipynb  kernel_fig.ipynb  timeseries.html  (+2 more)
(+202 files in other folders)
