[metadata]
name = gaussian_toolbox
version = 0.0.1
license = MIT
description = making gaussian manipulations easy
long_description = file: README.rst
author = Christian Donner
author_email = christian.research(at)mailbox.org
classifiers=
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Artificial Intelligence
   Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy >= 1.19.5
   scipy >= 1.7.3
   jaxlib >= 0.1.75
   jax >= 0.2.27
   objax >= 1.6.0

[options.packages.find]
where=src